<?xml version="1.0"?>
<package>
  <name>mh_solver_frontend</name>
  <version>0.0.0</version>
  <description>A frontend for "moving-horizon nonlinear least squares-based multirobot cooperative perception" applied to real or simulated soccer robot datasets.</description>

  <maintainer email="aamir.iitkgp@gmail.com">aamir</maintainer>

  <license>GPLv3</license>


  <build_depend>cmake_modules</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>read_omni_dataset</build_depend> 
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>tf</run_depend>   
  <run_depend>message_runtime</run_depend> 
  <run_depend>read_omni_dataset</run_depend>       
  <run_depend>roscpp</run_depend> 
  <run_depend>cv_bridge</run_depend>
  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
    <cpp cflags="-I/local/include -I/local/src" lflags="/local/lib"/>
  </export>
</package>
